--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,2 +1,12 @@
-idf_component_register(SRCS "main.c"
-                    INCLUDE_DIRS ".")
+idf_component_register(
+    SRCS "main.c"
+    INCLUDE_DIRS "."
+   REQUIRES
+    esp32-camera
+    esp_http_client
+    esp_wifi
+    nvs_flash
+    driver
+    fatfs
+    vfs
+)
