Transmite jpeg to wpf

--- a/idf_component.yml
+++ b/idf_component.yml
@@ -3,4 +3,4 @@ dependencies:
   esp_jpeg: "^1.3.0"
   esp_http_client: "^1.1.0"
   cJSON: "^1.7.0"
-  esp_websocket_client: "*"   # Component Manager подтянет встроенный
+  esp_websocket_client: "*"
