Split the project into files

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,14 +1,16 @@
 idf_component_register(
     SRCS "main.c"
-    INCLUDE_DIRS "."
-    REQUIRES
-        esp32-camera
-        esp_http_client
-        esp_wifi
-        nvs_flash
-        driver
-        fatfs
-        vfs
-        esp_netif
-        mdns
+         "src/config.c"
+         "src/network.c"
+         "src/camera.c"
+         "src/servo.c"
+    INCLUDE_DIRS "include"
+    REQUIRES esp32-camera
+             esp_http_server
+             esp_http_client
+             fatfs
+             esp_netif
+             esp_event
+             esp_wifi
+             nvs_flash
 )
