--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -5,6 +5,7 @@ idf_component_register(
          "src/camera.c"
          "src/servo.c"
          "src/webserver.c"
+         "src/globals.c"
     INCLUDE_DIRS "include"
     REQUIRES esp32-camera esp_http_server esp_http_client fatfs esp_netif esp_event esp_wifi nvs_flash mdns
 )
