--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -9,3 +9,16 @@ idf_component_register(
     INCLUDE_DIRS "include"
     REQUIRES esp32-camera esp_http_server esp_http_client fatfs esp_netif esp_event esp_wifi nvs_flash mdns
 )
+
+# Оптимизации для уменьшения IRAM использования
+target_compile_options(${COMPONENT_LIB} PRIVATE
+    "-ffunction-sections"
+    "-fdata-sections"
+    "-fno-ira-loop-pressure"
+    "-fno-ira-share-save-slots"
+    "-fno-ira-share-spill-slots"
+)
+
+target_link_options(${COMPONENT_LIB} PRIVATE
+    "-Wl,--gc-sections"
+)
